--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -97,6 +97,8 @@ jobs:
         run: npm run test:e2e -- --project=chromium
         env:
           PLAYWRIGHT_BASE_URL: http://localhost:3000
+          E2E_CLERK_USER_EMAIL: ${{ secrets.E2E_CLERK_USER_EMAIL }}
+          E2E_CLERK_USER_PASSWORD: ${{ secrets.E2E_CLERK_USER_PASSWORD }}
 
       - name: Upload Playwright report
         uses: actions/upload-artifact@v4
