--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -108,6 +108,14 @@ jobs:
           path: playwright-report/
           retention-days: 7
 
+      - name: Upload visual snapshots
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: visual-snapshots
+          path: tests/e2e/visual.spec.ts-snapshots/
+          retention-days: 30
+
   type-check:
     name: Type Check
     runs-on: ubuntu-latest
